--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bricks_breaker
+name: ball_master
 description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -15,14 +15,22 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   flutter_lints: ^2.0.0
-
+  flutter_launcher_icons: "^0.13.1"
+  change_app_package_name: ^1.1.0
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/images/
 
+ 
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  adaptive_icon_foreground: 'assets/icon_foreground.png'
+  adaptive_icon_background: '#ffffff'
+  ios: false
+  image_path: "assets/icon.png"
